--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,8 @@
 
+1.0.3 (2016-01-18)
+added: navigation from output result to source by DblClick/Enter/menu/cmds
+added: adaption to tidy tab-size with advance props
+fixed: try-catch calling
+
 1.0.0 (2016-01-12)
 init
