--- a/lang/ru/LC_MESSAGES/cuda_exttools.po
+++ b/lang/ru/LC_MESSAGES/cuda_exttools.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2016-03-14 14:16+0300\n"
-"PO-Revision-Date: 2016-03-14 14:38+0300\n"
+"PO-Revision-Date: 2016-03-15 10:54+0300\n"
 "Last-Translator: kvichans <kvichans@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -297,7 +297,7 @@ msgid "Comment="
 msgstr "Комментарий="
 
 #: cd_exttools.py:846
-msgid "Expression="
+msgid "Value="
 msgstr "Выражение="
 
 #: cd_exttools.py:846
@@ -313,7 +313,7 @@ msgid "User macro &vars"
 msgstr "Пользов. &макроподстановки"
 
 #: cd_exttools.py:866
-msgid "&Calculate..."
+msgid "Eva&luate..."
 msgstr "&Рассчитать..."
 
 #: cd_exttools.py:898
@@ -325,7 +325,7 @@ msgid "&Name:"
 msgstr "&Имя:"
 
 #: cd_exttools.py:901
-msgid "&Expression:"
+msgid "&Value:"
 msgstr "&Выражение:"
 
 #: cd_exttools.py:903
@@ -359,7 +359,7 @@ msgid "Set Name"
 msgstr "Задайте Имя"
 
 #: cd_exttools.py:940
-msgid "Set Expression"
+msgid "Set Value"
 msgstr "Задайте Выражение"
 
 #: cd_exttools.py:960
