--- a/lang/ru_RU/LC_MESSAGES/cuda_exttools.po
+++ b/lang/ru_RU/LC_MESSAGES/cuda_exttools.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2016-03-14 14:16+0300\n"
-"PO-Revision-Date: 2016-03-15 10:54+0300\n"
+"PO-Revision-Date: 2016-03-16 17:25+0300\n"
 "Last-Translator: kvichans <kvichans@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -400,7 +400,7 @@ msgstr "&Найти..."
 
 #: cd_exttools.py:1015
 msgid "&Shell command"
-msgstr ""
+msgstr "&Shell команда"
 
 #: cd_exttools.py:1018
 msgid "&Parameters"
