--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,8 +1,11 @@
+1.2.9 (2016-10-04)
+added: {CurrentWord}
+
 1.2.8 (2016-10-04)
 added: URLs
 
 1.2.7 (2016-09-19)
-fixed: Disign of Adv.props dlg
+fixed: Design of Adv.props dlg
 added: {Lexer}, {LexerAtCaret}
 
 1.2.6 (2016-09-11)
