--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.2.23 2018-04-20
+fixed: crash in Python tool, from empty encoding field of tool props
+
 1.2.22 2018-01-12
 added: captions in menu dialogs
 
