--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.5.24 (2018-09-25)
+fixed: avoid deprecated API
+
 1.2.23 2018-04-20
 fixed: crash in Python tool, from empty encoding field of tool props
 
