--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.2.29 (2018.12.22)
+added: tool output can be also "Copy to new document, group N", where N is 1...3
+
 1.2.28 (2018-12-20)
 added: macros {ContentAsTemp},{ContentAsTempr_gN} to use modified text of file via temporary file 
 
