--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.2.38 (2020-07-13)
+added: new substitution in all fields: "~" as home folder
+
 1.2.37 (2019-05-28)
 fixed: Use output "Replace selection" as inline or lines
 
