--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,5 +1,5 @@
 1.2.38 (2020-07-13)
-added: properly expand "~" (home dir symbol) in tool paths
+added: properly expand "~" and env-variables, in tool paths
 
 1.2.37 (2019-05-28)
 fixed: Use output "Replace selection" as inline or lines
