--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,5 +1,9 @@
+1.2.40 (2020-07-18)
+fixed: default encoding (if tool encoding option is empty)
+
 1.2.38 (2020-07-13)
 added: properly expand "~" and env-variables, in tool paths
+fixed: i18n
 
 1.2.37 (2019-05-28)
 fixed: Use output "Replace selection" as inline or lines
