--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.3.01 (2021-07-27)
+fixed: plugin work after some CudaText API was deleted
+
 1.2.40 (2020-07-18)
 fixed: default encoding (if tool encoding option is empty)
 
