--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,7 @@
+1.3.02 (2022-01.27): patch by Alexey T.
+added: macro {FileDir} is now allowed to use even for untitled tabs - this macro means empty-str here
+added: show more detailed statusbar error when {File..} macro is found for untitled tab
+
 1.3.01 (2021-07-27)
 fixed: plugin work after some CudaText API was deleted
 
