--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.3.04 (2022-10-06)
+fixed: avoid crashes on Windows when url open
+
 1.3.03 (2022-01-27): patch by Alexey T.
 added: macro {FileDir} is now allowed to use even for untitled tabs - this macro means empty-str here
 added: show more detailed statusbar error when {File..} macro is found for untitled tab
