--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.3.06 (2022-11-26)
+added: on adding lines to the Output panel, scroll Output to the end (by Alexey T.)
+
 1.3.04 (2022-11-06)
 fixed: avoid crashes on Windows when url open
 
