--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.3.08 (2023-07-05)
+changed: on action "Replace selection", put caret to the end of selection (by Alexey T.)
+
 1.3.06 (2022-11-26)
 added: on adding lines to the Output panel, scroll Output to the end (by Alexey T.)
 
