--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+1.3.13 (2025-01.02)
+fixed: URL with valid '@' char was not activated Ok (fixed by @MiroslavMatas)
+
 1.3.12 (2024-08-27)
 added: macro {SelectionAsTemp}
 
