--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,4 +1,7 @@
-1.3.13 (2025-01.02)
+1.3.14 (2025-01-24)
+fixed: syntax-errors in some Python strings with RegEx'es
+
+1.3.13 (2025-01-02)
 fixed: URL with valid '@' char was not activated Ok (fixed by @MiroslavMatas)
 
 1.3.12 (2024-08-27)
